--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,17 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "date-fns": "^4.1.0",
+    "express": "^5.1.0",
+    "json2csv": "^6.0.0-alpha.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/json2csv": "^5.0.7",
     "@types/node": "^22.15.21",
     "nodemon": "^3.1.10",
     "ts-node-dev": "^2.0.0",
